welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:5: error: Boolean does not take parameters
	else ( a<10 || a>10 &&  b<10 || b>10 ) { return 0 }
                                               ^